✨feat: add swagger docs, change some routes
